# taxa_occ

./: .gitignore  OLD_main.ui  _ressources.qrc  api taxanames.xlsx  api_endemia.py  api_thread.py  class_importCSV.py  class_properties.py  class_synonyms.py  clean_name_patterns.xlsx  commons.py  config.db  config.ini  darkstyle.qss  dataview  edit_name.ui  edit_taxaname.py  et --hard HEAD~2  graph_test.py  import numpy as np.py  import_csv.py  main.py  occ_model.py  occurrences.py  plots.py  plots.spec  plots.ui  pn_addsynonym.ui  pn_addsynonym2.ui  pn_addtaxa.ui  pn_dbconnection.ui  pn_edittaxa.ui  pn_florical.ui  pn_import.ui  pn_main.ui  pn_movetaxa.ui  pn_occurrences.py  pn_occurrences.ui  pn_searchtaxa.ui  pn_treeview.py  (+12 more)
core/: database.py  functions.py  icons_rc.py  ressources.py  widgets.py
core_old/: widgets.py
models/: api_taxonomy.py  api_thread.py  occ_model.py  synonyms.py  taxa_model.py
sql/: config_schema_taxonomy.sql  create_schema_taxonomy.sql
src/florica/: config.ini
src/florica/core/: database.py  functions.py  ressources.py  widgets.py
src/florica/models/: taxa_model.py
src/florica/nomen/: app.py
src/florica/vista/: occurrences.py
src/taxa_occ.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/taxaocc/: taxanames.py
src/taxaocc/core/: database.py
src/taxaocc/models/: api_taxonomy.py  taxa_model.py
ui/: Diffnes.qss  Geoo.qss  Lightstyle.qss  occurrences.ui  pn_addtaxa.ui  pn_editname.ui  pn_edittaxa.ui  pn_movetaxa.ui  pn_ncpippn_import.ui  pn_update_preview.ui  taxanames.ui
