[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taxa-occ"
version = "0.1.0"
description = "Application PyQt5 pour gestion de Taxa"
authors = [{name="Ton Nom"}]

# Dépendances principales pour les utilisateurs finaux
dependencies = [
    "PyQt5==5.15.11",
    "PyQt5-Qt5==5.15.18",
    "PyQt5_sip==12.18.0",
    "requests==2.32.5",
    "beautifulsoup4==4.14.3",
    "soupsieve==2.8.2",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "idna==3.11",
    "urllib3==2.6.3",
    "typing_extensions==4.15.0",
    "psycopg2-binary"  # PostgreSQL Python client
]

# Packages à inclure dans la distribution
[tool.setuptools]
packages = ["taxaname","core", "models"]

# Crée la commande CLI `taxanames`
[project.scripts]
taxanames = "taxanames:main"
