[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "florica"
version = "0.1.0"
description = "Software suite for managing botanical data"

readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "Philippe Birnbaum"}
]

dependencies = [
    "PyQt5>=5.15",
    "requests>=2.32",
    "beautifulsoup4>=4.12"
]

[project.gui-scripts]
# florica-nomen, to manage plant names
florica-nomen = "florica.nomen.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/..."